--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.App {
+/*.App {
   text-align: center;
 }
 
@@ -35,17 +35,41 @@
   to {
     transform: rotate(360deg);
   }
-}
+}*/
 
 /* Default styling above. Personal below */
-
 body {
-  padding-top: 100px;
+  color: #484848;
+}
+
+.navBarItem {
+  text-decoration: none;
+  font-weight: 400;
+  color: #616162;
+}
+
+.navBarItem:hover {
+  color: #e28530;
 }
 
 .pageHeader {
   text-align: center;
-  margin-bottom: 30px;
+  margin: 24px 0;
+  color: #484848;
+}
+
+.chartPageHeader {
+  text-align: center;
+  color: white;
+  margin: 0;
+  padding: 24px 0;
+}
+
+.chartPageContainer {
+  backgroundColor: #acb4bd;
+}
+
+.yAxisLegend {
 }
 
 /* Don't show error overlay box in dev mode */
@@ -80,7 +104,7 @@ iframe
 
 .castPhoto{
   display: block;
-  margin-left: auto;
+  margin-left: 0;
   margin-right: auto;
   max-width:300px;
 }
